Modified css to fix the overlap of last letters of label PHOTOGRAPHER with the name of the photographer on the image overlay box in Curator Worklist. WEB-1900

--- a/public/stylesheets/sass/curator_tools.sass
+++ b/public/stylesheets/sass/curator_tools.sass
@@ -114,21 +114,21 @@ div.content-wrap
 .credit-caption
   font-size: 9pt !important
   margin-bottom: 4pt
-  width: 7em !important
+  width: 9em !important
   padding-right: 2pt
 
 .credit-value
-  padding-left: 8em
+  padding-left: 1em
   font-size: 9pt !important
   margin: 2pt 0
-  float: none
-  width: 28em !important
+  float: left
+  width: 27em !important
 
   span
     font-weight: bold
 
 .action-value
-  padding-left: 8em
+  padding-left: 10em
   font-size: 9pt !important
   margin: 2pt 0
   float: none
